refactor: implement queue manager interface pattern with factory
- Add IMsmqQueueManager interface for queue operations
- Create PowerShellMsmqQueueManager implementation
- Create NativeMsmqQueueManager implementation (placeholder)
- Add MsmqQueueManagerFactory for dynamic implementation selection
- Update MsmqService to use new factory pattern
- Update MsmqStartupConfig and MsmqMessageTemplateService
- Remove old MsmqQueueManager classes from util package
- Fix bean name conflicts and compilation errors
- Maintain consistent architecture with connection managers